# alertbot

./: .dockerignore  .gitignore  .importlinter  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  config.py  main.py  models.py  observability.py
app/clients/: __init__.py  alertmanager.py  alertmanager_inbound.py  flashduty.py  lark.py
app/services/: __init__.py  audit.py  cards.py  oncall.py
app/webhooks/: __init__.py  alertmanager.py  flashduty.py  lark.py
config/: example.yaml
deploy/: Dockerfile
deploy/helm/alertbot/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
docs/: final-acceptance-review.md  rollback.md  runbook.md
docs/operating/: hot-reload.md
migrations/: env.py
migrations/versions/: 26f9bb55689e_initial_schema_alerts_silences_audit_log.py  3a1f6c2d8e91_alerts_add_annotations.py
specs/001-alertbot-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-alertbot-core/checklists/: requirements.md
specs/001-alertbot-core/contracts/: README.md  inbound-flashduty.md  inbound-lark.md  outbound-alertmanager.md  outbound-flashduty.md  outbound-lark.md
tests/: conftest.py
tests/fixtures/flashduty/: incident_closed.json  incident_created.json
tests/fixtures/lark/: url_verification.json
tests/integration/config/: test_hot_reload.py  test_hot_reload_e2e.py
tests/integration/flows/: test_alertmanager_webhook.py  test_metrics_endpoint.py  test_oncall_cache.py  test_silence_failure.py  test_silence_no_email.py  test_silence_timeout.py  test_us1_card_lost_fallback.py  test_us1_firing.py  test_us1_resolved.py  test_us3_silence_helpers.py  test_us3_silenced.py  test_us4_25h_rejected.py  test_us4_custom_7h.py  test_us4_malformed.py
tests/integration/idempotency/: test_lark_replay.py  test_us1_replay.py
tests/integration/signature/: test_fd_signature.py  test_lark_signature.py  test_lark_url_verification.py
tests/unit/: test_config_schema.py  test_observability.py
tests/unit/clients/: test_alertmanager_inbound.py  test_alertmanager_matchers.py  test_flashduty_readonly.py  test_flashduty_schedule_parser.py  test_lark_retries.py  test_lark_tenant_token.py  test_lark_user_lookup.py
tests/unit/deploy/: test_prod_helm_values.py
(+22 files in other folders)
